--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ sqlalchemy = "^2.0.36"
 pydantic = "^2.10.2"
 fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
+email-validator = "^2.2.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
