--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = "^0.32.1"
 email-validator = "^2.2.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 httpx = "^0.28.1"
+pyjwt = "^2.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
